[gd_scene load_steps=4 format=4 uid="uid://dnppdwihquoxv"]

[ext_resource type="Script" path="res://rythm_game/results_screen/NoteHitTotalsDisplay.gd" id="1_s740n"]
[ext_resource type="StyleBox" uid="uid://5p3tgk5ls5ia" path="res://styles/ResultRatingStyleOdd.tres" id="2_11u41"]
[ext_resource type="StyleBox" uid="uid://btifk3vr00fwd" path="res://styles/ResultRatingStyleEven.tres" id="3_0cuaq"]

[node name="NoteHitTotalsContainer" type="MarginContainer"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_s740n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_11u41")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer3"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="RatingLabel" type="Label" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "MAX COMBO"
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "(NT)700"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_0cuaq")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer4"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="RatingLabel" type="Label" parent="VBoxContainer/PanelContainer4/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "NOTES HIT"

[node name="NotesHitLabel" type="Label" parent="VBoxContainer/PanelContainer4/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "(NT)700"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_11u41")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="RatingLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer3"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "TOTAL NOTES"

[node name="TotalNotesLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer3"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "(NT)700"
horizontal_alignment = 2
vertical_alignment = 1
